--- a/data/styles/dark.css
+++ b/data/styles/dark.css
@@ -19,11 +19,11 @@ a.new:not(.image-details a, .wikitable a, .infobox a, .infobox_v2 a, .infobox_v3
 }
 
 #mw-mf-page-center {
-  background-color: #1b1b1b !important;
+  background-color: #242424 !important;
 }
 
 .mw-body {
-  background-color: #e4e4e4 !important;
+  background-color: #dbdbdb !important;
   filter: invert(100%);
 }
 
