add ability to display window controls in every toolbar view
Using Adw.HeaderBar as the top child of an
Adw.ToolbarView ensures that window controls are always
displayed correctly. This is an issue for the small
window sizes (<= 450px width), where the sidebar does not
display them. This is, however, the normal behaviour for
those kinds of sidebars covering the whole app's primary
window.

Additionally, the left most pane visible in medium and
large window mode (<= 750px and 751px+) would need
manually added Gtk.WindowControls for side: start to
supported close buttons on the left for completeness
purposes.

Signed-off-by: Markus Göllnitz <camelcasenick@bewares.it>

--- a/data/gtk/bookmarks.ui
+++ b/data/gtk/bookmarks.ui
@@ -13,34 +13,34 @@ SPDX-License-Identifier: GPL-3.0-or-later
 
         <!-- Header -->
         <child type="top">
-          <object class="GtkBox">
-            <style>
-              <class name="toolbar"/>
-            </style>
+          <object class="AdwHeaderBar">
+            <property name="title-widget">
+              <object class="GtkBox">
+                <!-- Bookmark list selector -->
+                <child>
+                  <object class="GtkDropDown" id="booklists_dropdown">
+                    <property name="hexpand">true</property>
+                  </object>
+                </child>
 
-            <!-- Bookmark list selector -->
-            <child>
-              <object class="GtkDropDown" id="booklists_dropdown">
-                <property name="hexpand">true</property>
+                <!-- Add bookmark button -->
+                <child>
+                  <object class="GtkButton" id="add_button">
+                    <property name="icon-name">bookmark-new-symbolic</property>
+                    <property name="tooltip-text" translatable="yes">Add Bookmark</property>
+                    <property name="action-name">win.add-bookmark</property>
+                  </object>
+                </child>
+
+                <!-- Menu button -->
+                <child>
+                  <object class="GtkMenuButton" id="menu_button">
+                    <property name="icon-name">view-more-symbolic</property>
+                  </object>
+                </child>
+
               </object>
-            </child>
-
-            <!-- Add bookmark button -->
-            <child>
-              <object class="GtkButton" id="add_button">
-                <property name="icon-name">bookmark-new-symbolic</property>
-                <property name="tooltip-text" translatable="yes">Add Bookmark</property>
-                <property name="action-name">win.add-bookmark</property>
-              </object>
-            </child>
-
-            <!-- Menu button -->
-            <child>
-              <object class="GtkMenuButton" id="menu_button">
-                <property name="icon-name">view-more-symbolic</property>
-              </object>
-            </child>
-
+            </property>
           </object>
         </child>
 
