--- a/data/gtk/toc.ui
+++ b/data/gtk/toc.ui
@@ -13,17 +13,20 @@ SPDX-License-Identifier: GPL-3.0-or-later
 
         <!-- Article title label -->
         <child type="top">
-          <object class="GtkLabel" id="title_label">
-            <property name="margin-start">15</property>
-            <property name="margin-end">15</property>
-            <property name="height-request">46</property>
-            <property name="xalign">0</property>
-            <property name="width-chars">30</property>
-            <property name="max-width-chars">30</property>
-            <property name="ellipsize">end</property>
-            <style>
-              <class name="heading"/>
-            </style>
+          <object class="AdwHeaderBar">
+            <property name="title-widget">
+              <object class="GtkLabel" id="title_label">
+                <property name="margin-start">15</property>
+                <property name="margin-end">15</property>
+                <property name="xalign">0</property>
+                <property name="width-chars">30</property>
+                <property name="max-width-chars">30</property>
+                <property name="ellipsize">end</property>
+                <style>
+                  <class name="heading"/>
+                </style>
+              </object>
+            </property>
           </object>
         </child>
 
