--- a/data/gtk/page.ui
+++ b/data/gtk/page.ui
@@ -28,29 +28,28 @@ SPDX-License-Identifier: GPL-3.0-or-later
               </object>
             </child>
 
-            <!-- Searchbar buttons box -->
+            <!-- Searchbar prev button -->
             <child>
-              <object class="GtkBox">
-                <style>
-                  <class name="linked"/>
-                </style>
+              <object class="GtkButton" id="search_prev_button">
+                <property name="icon-name">go-up-symbolic</property>
+                <property name="sensitive">False</property>
+              </object>
+            </child>
 
-                <!-- Searchbar prev button -->
-                <child>
-                  <object class="GtkButton" id="search_prev_button">
-                    <property name="icon-name">go-up-symbolic</property>
-                    <property name="sensitive">False</property>
-                  </object>
-                </child>
+            <!-- Searchbar next button -->
+            <child>
+              <object class="GtkButton" id="search_next_button">
+                <property name="icon-name">go-down-symbolic</property>
+                <property name="sensitive">False</property>
+              </object>
+            </child>
 
-                <!-- Searchbar next button -->
-                <child>
-                  <object class="GtkButton" id="search_next_button">
-                    <property name="icon-name">go-down-symbolic</property>
-                    <property name="sensitive">False</property>
-                  </object>
-                </child>
-
+            <!-- Matches label -->
+            <child>
+              <object class="GtkLabel" id="search_matches_label">
+                <property name="width-chars">4</property>
+                <property name="margin-start">9</property>
+                <property name="xalign">0</property>
               </object>
             </child>
 
