Small style tweaks

--- a/data/gtk/bookmarks.ui
+++ b/data/gtk/bookmarks.ui
@@ -117,7 +117,7 @@ SPDX-License-Identifier: GPL-3.0-or-later
                 <property name="icon-name">app-remove-symbolic</property>
                 <property name="tooltip-text" translatable="yes">Remove Selected</property>
                 <style>
-                  <class name="button-remove"/>
+                  <class name="destructive-action"/>
                 </style>
               </object>
             </child>
