--- a/data/gtk/about.ui
+++ b/data/gtk/about.ui
@@ -5,9 +5,9 @@ SPDX-FileCopyrightText: 2021-24 Hugo Olabera <hugolabe@gmail.com>
 SPDX-License-Identifier: GPL-3.0-or-later
 -->
 
-<!-- About Wike window -->
+<!-- About Wike dialog -->
 <interface>
-  <object class="AdwAboutWindow" id="about_window">
+  <object class="AdwAboutDialog" id="about_dialog">
     <property name="application-icon">com.github.hugolabe.Wike</property>
     <property name="application-name">Wike</property>
     <property name="developer-name">Hugo Olabera</property>
