--- a/data/gtk/dialogs.ui
+++ b/data/gtk/dialogs.ui
@@ -8,16 +8,16 @@ SPDX-License-Identifier: GPL-3.0-or-later
 <interface>
 
   <!-- New bookmarks list dialog -->
-  <object class="AdwMessageDialog" id="new_booklist_dialog">
+  <object class="AdwAlertDialog" id="new_booklist_dialog">
     <property name="heading" translatable="yes">New Bookmarks List</property>
     <property name="default-response">create</property>
     <property name="close-response">cancel</property>
+    <property name="width-request">340</property>
     <property name="extra-child">
       <object class="AdwPreferencesGroup">
         <child>
           <object class="AdwEntryRow" id="name_entry">
             <property name="title" translatable="yes">List Name</property>
-            <property name="width-request">340</property>
             <property name="activates-default">true</property>
           </object>
         </child>
@@ -30,16 +30,16 @@ SPDX-License-Identifier: GPL-3.0-or-later
   </object>
 
   <!-- Rename bookmarks list dialog -->
-  <object class="AdwMessageDialog" id="rename_booklist_dialog">
+  <object class="AdwAlertDialog" id="rename_booklist_dialog">
     <property name="heading" translatable="yes">Rename Bookmarks List</property>
     <property name="default-response">rename</property>
     <property name="close-response">cancel</property>
+    <property name="width-request">340</property>
     <property name="extra-child">
       <object class="AdwPreferencesGroup">
         <child>
           <object class="AdwEntryRow" id="rename_entry">
             <property name="title" translatable="yes">List Name</property>
-            <property name="width-request">340</property>
             <property name="activates-default">true</property>
           </object>
         </child>
@@ -52,10 +52,9 @@ SPDX-License-Identifier: GPL-3.0-or-later
   </object>
 
   <!-- Clear bookmarks list dialog -->
-  <object class="AdwMessageDialog" id="clear_booklist_dialog">
+  <object class="AdwAlertDialog" id="clear_booklist_dialog">
     <property name="heading" translatable="yes">Clear Bookmarks List?</property>
     <property name="body" translatable="yes">All bookmarks in the list will be removed permanently.</property>
-    <property name="width-request">400</property>
     <property name="default-response">clear</property>
     <property name="close-response">cancel</property>
     <property name="extra-child">
@@ -70,10 +69,9 @@ SPDX-License-Identifier: GPL-3.0-or-later
   </object>
 
   <!-- Clear history dialog -->
-  <object class="AdwMessageDialog" id="clear_history_dialog">
+  <object class="AdwAlertDialog" id="clear_history_dialog">
     <property name="heading" translatable="yes">Clear History?</property>
     <property name="body" translatable="yes">The history of visited articles will be deleted permanently.</property>
-    <property name="width-request">400</property>
     <property name="default-response">clear</property>
     <property name="close-response">cancel</property>
     <responses>
@@ -83,10 +81,9 @@ SPDX-License-Identifier: GPL-3.0-or-later
   </object>
 
   <!-- Clear personal data dialog -->
-  <object class="AdwMessageDialog" id="clear_data_dialog">
+  <object class="AdwAlertDialog" id="clear_data_dialog">
     <property name="heading" translatable="yes">Clear Personal Data?</property>
     <property name="body" translatable="yes">Cookies and cache data will be deleted permanently.</property>
-    <property name="width-request">400</property>
     <property name="default-response">clear</property>
     <property name="close-response">cancel</property>
     <responses>
