--- a/data/gtk/page.ui
+++ b/data/gtk/page.ui
@@ -32,6 +32,7 @@ SPDX-License-Identifier: GPL-3.0-or-later
             <child>
               <object class="GtkButton" id="search_prev_button">
                 <property name="icon-name">go-up-symbolic</property>
+                <property name="tooltip-text" translatable="yes">Previous Result</property>
                 <property name="sensitive">False</property>
               </object>
             </child>
@@ -40,6 +41,7 @@ SPDX-License-Identifier: GPL-3.0-or-later
             <child>
               <object class="GtkButton" id="search_next_button">
                 <property name="icon-name">go-down-symbolic</property>
+                <property name="tooltip-text" translatable="yes">Next Result</property>
                 <property name="sensitive">False</property>
               </object>
             </child>
