--- a/data/gtk/menu-main.ui
+++ b/data/gtk/menu-main.ui
@@ -17,7 +17,7 @@ SPDX-License-Identifier: GPL-3.0-or-later
       </item>
       <item>
         <attribute name="label" translatable="yes">Keyboard Shortcuts</attribute>
-        <attribute name="action">win.show-help-overlay</attribute>
+        <attribute name="action">app.shortcuts</attribute>
       </item>
       <item>
         <attribute name="label" translatable="yes">About Wike</attribute>
