--- a/data/gtk/style-dark.css
+++ b/data/gtk/style-dark.css
@@ -6,5 +6,10 @@ SPDX-License-Identifier: GPL-3.0-or-later
 
 /* Dark theme */
 
-@define-color window_bg_color #222226;
-@define-color headerbar_bg_color #222226;
+:root {
+  --headerbar-bg-color: #101418;
+}
+
+.wikiview-status {
+  background-color: #101418;
+}
