--- a/data/styles/view.css
+++ b/data/styles/view.css
@@ -7,7 +7,7 @@ SPDX-License-Identifier: GPL-3.0-or-later
 /* General */
 
 #mw-mf-page-center {
-  background-color: #fff !important;
+  background-color: transparent !important;
 }
 
 #mw-notification-area {
@@ -88,12 +88,7 @@ h1 {
   display: none !important;
 }
 
-.mwe-popups .mwe-popups-extract {
-  text-decoration: none !important;
-  color: #202122 !important;
-}
-
-.mwe-popups .mwe-popups-settings-icon {
+.mwe-popups .mwe-popups-settings-button {
   display: none !important;
 }
 
