--- a/data/gtk/shortcuts-dialog.ui
+++ b/data/gtk/shortcuts-dialog.ui
@@ -12,74 +12,74 @@ SPDX-License-Identifier: GPL-3.0-or-later
     <!-- Section general -->
     <child>
       <object class="AdwShortcutsSection">
-        <property name="title" translatable="yes" context="shortcuts dialog">General</property>
+        <property name="title" translatable="yes" context="shortcut window">General</property>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Main menu</property>
+            <property name="title" translatable="yes" context="shortcut window">Main menu</property>
             <property name="accelerator">F10</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Sidebar</property>
+            <property name="title" translatable="yes" context="shortcut window">Sidebar</property>
             <property name="action-name">win.pin-panel</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Table of contents</property>
+            <property name="title" translatable="yes" context="shortcut window">Table of contents</property>
             <property name="action-name">win.show-toc</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Languages</property>
+            <property name="title" translatable="yes" context="shortcut window">Languages</property>
             <property name="action-name">win.show-langlinks</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Search text</property>
+            <property name="title" translatable="yes" context="shortcut window">Search text</property>
             <property name="action-name">win.search-text</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Print</property>
+            <property name="title" translatable="yes" context="shortcut window">Print</property>
             <property name="action-name">win.print-page</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Copy link to clipboard</property>
+            <property name="title" translatable="yes" context="shortcut window">Copy link to clipboard</property>
             <property name="action-name">win.copy-link</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Preferences</property>
+            <property name="title" translatable="yes" context="shortcut window">Preferences</property>
             <property name="action-name">app.prefs</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Keyboard shortcuts</property>
+            <property name="title" translatable="yes" context="shortcut window">Keyboard shortcuts</property>
             <property name="action-name">app.shortcuts</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Quit</property>
+            <property name="title" translatable="yes" context="shortcut window">Quit</property>
             <property name="action-name">app.quit</property>
           </object>
         </child>
@@ -90,18 +90,18 @@ SPDX-License-Identifier: GPL-3.0-or-later
     <!-- Section bookmarks -->
     <child>
       <object class="AdwShortcutsSection">
-        <property name="title" translatable="yes" context="shortcuts dialog">Bookmarks</property>
+        <property name="title" translatable="yes" context="shortcut window">Bookmarks</property>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Bookmarks</property>
+            <property name="title" translatable="yes" context="shortcut window">Bookmarks</property>
             <property name="action-name">win.show-bookmarks</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Add bookmark</property>
+            <property name="title" translatable="yes" context="shortcut window">Add bookmark</property>
             <property name="action-name">win.add-bookmark</property>
           </object>
         </child>
@@ -112,39 +112,39 @@ SPDX-License-Identifier: GPL-3.0-or-later
     <!-- Section tabs -->
     <child>
       <object class="AdwShortcutsSection">
-        <property name="title" translatable="yes" context="shortcuts dialog">Tabs</property>
+        <property name="title" translatable="yes" context="shortcut window">Tabs</property>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">New tab</property>
+            <property name="title" translatable="yes" context="shortcut window">New tab</property>
             <property name="action-name">win.new-tab</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Close current tab</property>
+            <property name="title" translatable="yes" context="shortcut window">Close current tab</property>
             <property name="action-name">win.close-tab</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Next tab</property>
+            <property name="title" translatable="yes" context="shortcut window">Next tab</property>
             <property name="action-name">win.next-tab</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Previous tab</property>
+            <property name="title" translatable="yes" context="shortcut window">Previous tab</property>
             <property name="action-name">win.prev-tab</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">View open tabs</property>
+            <property name="title" translatable="yes" context="shortcut window">View open tabs</property>
             <property name="action-name">win.toggle-overview</property>
           </object>
         </child>
@@ -155,60 +155,60 @@ SPDX-License-Identifier: GPL-3.0-or-later
     <!-- Section navigation -->
     <child>
       <object class="AdwShortcutsSection">
-        <property name="title" translatable="yes" context="shortcuts dialog">Navigation</property>
+        <property name="title" translatable="yes" context="shortcut window">Navigation</property>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Search articles</property>
+            <property name="title" translatable="yes" context="shortcut window">Search articles</property>
             <property name="action-name">win.show-search</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Main page</property>
+            <property name="title" translatable="yes" context="shortcut window">Main page</property>
             <property name="action-name">win.main-page</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Random article</property>
+            <property name="title" translatable="yes" context="shortcut window">Random article</property>
             <property name="action-name">win.random-article</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Open Wikipedia link</property>
+            <property name="title" translatable="yes" context="shortcut window">Open Wikipedia link</property>
             <property name="action-name">win.open-link</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">History of recent articles</property>
+            <property name="title" translatable="yes" context="shortcut window">History of recent articles</property>
             <property name="action-name">win.show-history</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Previous page</property>
+            <property name="title" translatable="yes" context="shortcut window">Previous page</property>
             <property name="action-name">win.prev-page</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Next page</property>
+            <property name="title" translatable="yes" context="shortcut window">Next page</property>
             <property name="action-name">win.next-page</property>
           </object>
         </child>
 
         <child>
           <object class="AdwShortcutsItem">
-            <property name="title" translatable="yes" context="shortcuts dialog">Reload current page</property>
+            <property name="title" translatable="yes" context="shortcut window">Reload current page</property>
             <property name="action-name">win.reload-page</property>
           </object>
         </child>
