Allow markup formatting in table of contents rows
Since the TOC is populated with the section line instead of its ID,
formatting tags like `<i> ... </i>` are displayed. But if markup is
enabled in the GtkLabel, then the formatting tags are applied.

This also preserves meaning from italicized words in the section names.

--- a/data/gtk/toc-row.ui
+++ b/data/gtk/toc-row.ui
@@ -16,6 +16,7 @@ SPDX-License-Identifier: GPL-3.0-or-later
         <property name="margin-end">3</property>
         <property name="halign">start</property>
         <property name="ellipsize">end</property>
+        <property name="use-markup">true</property>
       </object>
     </child>
 
